k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: expense-tracker-backend
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
